changed bg color

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-$color-bg: #efeeee;
-$color-shadow: #babecc;
+$color-bg: #eee8f3a2;
+$color-shadow: #000000;
 $color-white: #fff;
 $color-red: #ae1100;
 $ruler: 16px;
